--- a/views/partials/pageHead.hbs
+++ b/views/partials/pageHead.hbs
@@ -5,4 +5,5 @@
 	<!-- Bootstrap -->
 	<!-- Used for demo -->
 	<link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/theme.css"
 </head>
