--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -1,1 +1,3 @@
 <!-- scripts here -->
+<script src="https://unpkg.com/react@15/dist/react.min.js"></script>
+<script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
