--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -3,7 +3,9 @@
   <body class="l-{{template}}">
   	{{{body}}}
     
-    {{{component}}}
+    <div id='react-app'>
+      {{{component}}}
+    </div>
 
     {{> scripts}}
   </body>
