Added infinite scrolling, missing filters

--- a/views/partials/pageHead.hbs
+++ b/views/partials/pageHead.hbs
@@ -4,6 +4,9 @@
 
 	<!-- Bootstrap -->
 	<!-- Used for demo -->
-	<link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
-    <link type="text/css" rel="stylesheet" href="/css/theme.css"
+	<link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/theme.css" />
+    <script>
+        window.REACT_APP_DATA = {{{reactData}}};
+    </script>
 </head>
