--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,5 +1,84 @@
 .container {
     width: 100%;
-    overflow: auto;
-    height: 640px;
+    font-family: ('Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif)
 }
+
+.total {
+    width: 100%; 
+    height: 20px; 
+    border-bottom: 1px solid black; 
+    text-align: center;
+}
+
+.total span {
+    font-size: 40px;
+    background-color: #F3F5F6;
+    padding: 0 10px;
+}
+
+.title { text-align: center }
+
+.hr-text {
+  line-height: 1em;
+  position: relative;
+  outline: 0;
+  border: 0;
+  color: black;
+  text-align: center;
+  height: 1.5em;
+  opacity: .5;
+  margin-top: -10px;
+}
+
+.hr-text:before {
+    content: '';
+    background: linear-gradient(to right, transparent, #818078, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+}
+
+.hr-text:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    color: black;
+
+    padding: 0 .5em;
+    line-height: 1.5em;
+    color: #818078;
+    background-color: #fcfcfa;
+}
+
+select.sortby.pull-right {
+    width: 140px;
+    margin-top: 30px;
+}
+
+.product {
+    min-height: 400px;
+    max-height: 400px;
+    padding: 20px;
+}
+
+.product p.brand {
+    font-weight: 700;
+    margin: 0;
+}
+
+.product p.name {
+    text-align: justify;
+    margin: 0;
+}
+
+.product span.price {
+    color: green;
+}
+
+.image {
+    background-image: url('../images/placeholder.png') no-repeat;
+    background-position: center;
+}
+
