--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -3,6 +3,23 @@
     font-family: ('Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif)
 }
 
+.container .title {
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.row.loading {
+    text-align: center;
+}
+
+.pagination {
+    margin-bottom: 0;
+}
+.pagination > li > span {
+    border: none;
+    font-size: 12px;
+    cursor: pointer;
+}
 .total {
     width: 100%; 
     height: 20px; 
@@ -57,74 +74,70 @@ select.sortby.pull-right {
     margin-top: 30px;
 }
 
+.product-container {
+    padding: 0 10px;
+}
 .product p.brand {
     font-weight: 700;
+    margin:0;
 }
-.product p {
-    margin: 0;
+.product p.name {
+    margin: -5px;
 }
 .product span.price {
     color: green;
-}
-@media (max-width:360px){
-    .product {
-        min-height: 300px;
-        max-height: 300px;
-        padding: 5px;
-        font-size: 10px;
-        width: 100%;
-    }
-    
-    .product img {
-        width: 150px;
-    }
-    .product .descripcion {
-        text-align: center;
-    }
+    margin-top: -5px;
 }
 
-@media (min-width:361px){
-    .product {
-        min-height: 280px;
-        max-height: 280px;
-        padding: 5px;
-        font-size: 10px;
-    }
-    .product img {
-        width: 100px;
-    }
-    .product .descripcion {
-        text-align: center;
-    }
+.product {
+    padding: 5px;
+    font-size: 10px;
+    height: 250px;
 }
 
-@media (min-width:742px){
+.product img {
+    width: 100%;
+    max-width: 120px;
+    text-align: center;
+}
+.product .descripcion {
+    text-align: center;
+}
+
+
+@media (min-width:740px){
     .product {
         padding: 10px;
-        min-height: 380px;
-        max-height: 380px;
+        height: 400px;
+    }
 
-    }
-    .product .descripcion {
-        text-align: left;
-    }
-    .product .image {
-        text-align: left;
+    .product img {
+        max-width: 220px;
     }
 }
 @media (min-width:992px){
     .product {
-        min-height: 400px;
-        max-height: 400px;
-        padding: 20px;
+        padding: 0 20px 10px;
+        margin-bottom: 10px;
+        height: 300px;
     }
+
+    .product img {
+        width: 150px;
+    }
+
     .product .descripcion {
-        text-align: justify;
+        font-size: 14px;
     }
 }
 
 .image {
-    background-image: url('../images/placeholder.png') no-repeat;
     text-align: center;
 }
 
+.filter-panel {
+    padding-left: 20px;
+}
+.form-filter {
+    border-top: 1px solid #000000;
+}
