--- a/views/sorry.hbs
+++ b/views/sorry.hbs
@@ -5,6 +5,7 @@
             our developers are working to fix this problem.
             Thank you for your cooperation.
         </p>
+        {{{body}}}
         <p><a class="btn btn-primary btn-lg" href="/" role="button">Go Home</a></p>
     </div>
 </div>
