--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -3,11 +3,6 @@
     font-family: ('Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif)
 }
 
-.container .title {
-    margin-top: 5px;
-    margin-bottom: 0;
-}
-
 .row.loading {
     text-align: center;
 }
@@ -33,7 +28,24 @@
     padding: 0 10px;
 }
 
-.title { text-align: center }
+.title { 
+    text-align: left; 
+    padding-left: 15px; 
+    font-size: 14px; 
+    margin-top: 5px;
+}
+
+.mobile-filter {
+    border-top: 1px solid #cecece;
+    border-bottom: 1px solid #cecece;
+}
+
+.filter-button-container {
+    text-align: right;
+}
+.filter-btn {
+    color: #303030;
+}
 
 .hr-text {
   line-height: 1em;
@@ -69,9 +81,10 @@
     background-color: #fcfcfa;
 }
 
-select.sortby.pull-right {
+select.sortby {
     width: 140px;
-    margin-top: 30px;
+    border: 1px solid #cecece;
+    margin: 5px;
 }
 
 .product-container {
@@ -82,7 +95,8 @@ select.sortby.pull-right {
     margin:0;
 }
 .product p.name {
-    margin: -5px;
+    margin: -2px 0 0;
+    line-height: 1;
 }
 .product span.price {
     color: green;
@@ -104,6 +118,165 @@ select.sortby.pull-right {
     text-align: center;
 }
 
+.product span.onsale {
+    background: greenyellow;
+    position: absolute;
+    padding: 4px;
+    left: 0;
+}
+
+/*************** QUICKVIEW ***************/
+.quickview {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+
+.quickview .panel {
+    width: 100%;
+    top: 100px;
+    position: relative;
+    margin: auto;
+}
+
+.quickview .panel-heading {
+    height: 50px;
+    background-color: #303030;
+}
+
+.panel-heading .btn {
+    padding: 0;
+    width: 20px;
+    height: 20;
+}
+
+.quickview h3.panel-title, .quickview h3 {
+    height: 30px;
+    width: 80%;
+    float: left;
+    font-size: 12px;
+    margin: 5px 0 0;
+}
+
+.quickview .info .sizes, .quickview .info .qty {
+    padding-top: 10px;
+}
+
+.quickview .content img {
+    max-height: 350px;
+    max-width: 300px;
+    width: 100%;
+}
+
+.quickview .slider {
+    padding: 0 10px 10px;
+    float:left;
+    max-width: 50%;
+    width: 50%;
+}
+
+.quickview .slider .controls {
+    position: absolute;
+    top: 35%;
+    width: 40%;
+}
+
+.quickview .slider .controls i {
+    font-size: 16px;
+}
+
+.quickview .slider .controls a.btn.btn-next {
+    float: right;
+}
+
+.quickview .info {
+    width: 50%;
+    float: left;
+    padding: 0 10px 10px;
+}
+
+.quickview .info .sizes .check-selector {
+    padding: 0;
+}
+
+.quickview .info .about {
+    font-size: 12px;
+}
+
+.quickview .info .about p.badges {
+    color: #8a6d3b;
+}
+
+.quickview .info .about span {
+    font-weight: 600;
+}
+
+.quickview .info .badges span {
+    text-transform: capitalize;
+    padding: 0 10px 0 0;
+}
+
+.buy {
+    margin-top: 10px;
+    text-align: right;
+}
+
+/********** FILTER DROPDOWN ***********/
+.filter-dropdown {
+    position: absolute;
+    z-index: 10;
+    right: 15px;
+    background-color: #ffffff;
+    border: 1px solid;
+    padding: 10px;
+    margin-top: -5px;
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+}
+
+.filter-dropdown::before {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    /* border-top: 8px solid transparent; */
+    border-bottom: 6px solid black;
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;
+    top: -6px;
+    right: 13px;
+}
+
+.filter-scheme h3 {
+    font-size: 16px;
+    margin: 5px;
+}
+
+.filter-dropdown label.checkbox-inline {
+    text-align: left;
+    width: 50%;
+}
+
+.filter-dropdown .filter-scheme {
+    text-align: left;
+}
+
+.filter-dropdown .checkbox-inline+.checkbox-inline {
+    margin-left: 0px;
+}
+
+.filter-dropdown .btn {
+    width: 80%;
+    padding: 5px 10px;
+    margin: 5px 10%;
+}
 
 @media (min-width:740px){
     .product {
@@ -116,6 +289,45 @@ select.sortby.pull-right {
     }
 }
 @media (min-width:992px){
+    .product span.onsale {
+        left: 10%;
+    }
+    
+    .quickview .panel {
+        width: 60%;
+        position: relative;
+        margin: auto;
+    }
+
+    .quickview h3.panel-title, .quickview h3 {
+        font-size: 24px;
+    }
+
+    .quickview .buy .btn {
+        width: 150px;
+    }
+
+    .quickview .info .about {
+        font-size: 18px;
+    }
+
+    .quickview .slider {
+        height: 400px;
+        min-height: 400px;
+    }
+
+    .quickview .slider .controls i {
+        font-size: 24px;
+    }
+
+    .title { 
+        text-align: center;
+        font-size: 26px;
+        letter-spacing: 2px;
+    }
+    select.sortby {
+        margin: 25px 0 0;
+    }
     .product {
         padding: 0 20px 10px;
         margin-bottom: 10px;
@@ -129,10 +341,17 @@ select.sortby.pull-right {
     .product .descripcion {
         font-size: 14px;
     }
+
+    .pagination > li.active > span {
+        color: #000000;
+        background-color: #fcfcfa;
+        font-weight: 700;
+    }
 }
 
 .image {
     text-align: center;
+    cursor: pointer;
 }
 
 .filter-panel {
